# picgen

./: .env  .gitignore  README.md  form.json  form_new.json  main.py  pyproject.toml  test.py
data_doc/: dataset.jsonl  train.jsonl  val.jsonl
data_phrase/: __init__.py  call.py  trainer.py
hw/: gen.py
new_pic/: __init__.py  get_part.py  new_content.py  new_pic_data.py  real.py
noise/: __init__.py
verify_square/: __init__.py  data.py  data_gen.py  infer.py  make_split.py  trainer.py
